# jewel

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.env.example  compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build_and_publish_image.yml  ci.yml
abstract/: games.py  importers.py  repositories.py
csv_importer/: adapters.py  importers.py
csv_importer/__tests__/: test_adapters.py  test_importers.py
docker/: dev.Dockerfile  docker-entrypoint.sh  prod.Dockerfile  uwsgi-mime.types
games/: admin.py  forms.py  models.py  repositories.py  signals.py
games/__tests__/: test_admin.py  test_bulk_import.py  test_models.py  test_repositories.py
games/admin_views/: bulk_import.py
games/api/: authentication.py  serializers.py  urls.py  views.py
games/api/__tests__/: factories.py  test_views.py
games/management/commands/: import_csv_data.py  match_steam_games.py  pull_steam_data.py
games/migrations/: 0001_initial.py  0002_remove_game_platform_gameonplatform_game_platforms.py  0002_remove_game_title_game_name_squashed_0003_alter_game_name.py  0003_alter_gameonplatform_added_and_more.py  0004_add_soft_delete_to_gameonplatform.py  0004_alter_game_added_alter_game_genre_and_more.py  0005_alter_gameonplatform_game_and_more.py  0005_rename_source_to_vendor.py  0006_alter_genre_name.py  0007_alter_game_id.py  0008_rename_genre_game_genres.py  0009_alter_game_controller_support.py  0010_alter_game_party_fit.py  0011_alter_game_genres_alter_game_platforms_and_more.py  0012_remove_game_added_remove_game_price_and_more.py
games/templates/admin/games/game/: bulk_import.html  change_list.html
gaming/: asgi.py  settings.py  settings_tests.py  urls.py  wsgi.py
jewel/: asgi.py  prod.settings.py  settings.py  settings_tests.py  urls.py  wsgi.py
steam/: adapters.py  admin.py  apps.py  models.py  repositories.py  signals_processors.py  utils.py
steam/__tests__/: test_signals.py
steam/management/commands/: load_steam_library.py
steam/migrations/: 0001_initial.py
