[project]
name = "jewel"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "black==22.8.0",
    "django==4.1.1",
    "django-extensions==3.2.1",
    "django-filter==22.1",
    "djangorestframework==3.14.0",
    "fuzzywuzzy>=0.18.0",
    "ipdb==0.13.9",
    "ipython==8.5.0",
    "markdown==3.4.1",
    "pandas>=2.3.1",
    "pre-commit==2.20.0",
    "price-parser==0.3.4",
    "pytest==7.1.3",
    "pytest-django==4.5.2",
    "pytest-watch==4.2.0",
    "requests>=2.32.4",
    "tqdm==4.64.1",
]
